LIST OF CHANGES
---------------

release 68.7.1 (2024-12-17)
 - Fix perlbrew installation by installing libdevel-patchperl-perl in runner
 - Changed/extended tests for npg_pipeline::function::autoqc to ensure that
   the tests work with changes in https://github.com/wtsi-npg/npg_qc/pull/895
   (study_specific assessment is disabled for lanes). Tested that a pools that
   has samples from multiple studies does not cause problems.

release 68.7.0 (2024-12-02)
 - npg_pipeline::function::autoqc
   - Simplified the flow of the code.
   - Made clearer logic for choosing QC checks to run, provided comments.
   - Allowed for running the review QC check on lanes.
 - Move from Miniconda to Miniforge

release 68.6.0 (2024-10-24)
 - The runfolder_path attribute is passed to the constructor of the review
   autoqc check object when deciding whether this check should run.

release 68.5.1 (2024-10-04)
 - Added .github/dependabot.yml file to auto-update GitHub actions
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.
 - GitHub CI - updated deprecated v2 runner to v3

release 68.5.0 (2024-09-04)
 - The runfolder_path argument is added to the command for the autoqc review
   check. See https://github.com/wtsi-npg/npg_qc/pull/869

release 68.4.0 (2024-08-06)
 - Ensured mark duplicate method can be inferred for a product with multiple
   studies (tag zero).
 - Upgrading tests
   - Use contemporary run folders for tests (NovaSeqX)
   - Clean fixtures
   - Prevent tests from accessing live databases (reset HOME)
